--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,12 @@ Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9),
                python-all (>= 2.6.6-3),
-               python-setuptools (>= 0.6b3)
+               python-setuptools (>= 0.6b3),
+               python3-all (>= 3.3),
+               python3-setuptools (>= 0.6b3),
 Standards-Version: 3.9.5
-X-Python-Version: >= 2.5
+X-Python-Version: >= 2.7
+X-Python3-Version: >= 3.3
 Homepage: https://bitbucket.org/Jeffrey/gevent-websocket
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/gevent-websocket.git
 Vcs-Git: git://anonscm.debian.org/collab-maint/gevent-websocket.git
@@ -14,6 +17,19 @@ Vcs-Git: git://anonscm.debian.org/collab-maint/gevent-websocket.git
 Package: python-gevent-websocket
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}
+Description: websocket library for the gevent networking library
+ gevent-websocket is a WebSocket library for the gevent networking library.
+ .
+ Features include:
+ .
+  * Integration on both socket level or using an abstract interface.
+  * RPC and PubSub framework using WAMP (WebSocket Application Messaging
+    Protocol).
+  * Easily extendible using a simple WebSocket protocol plugin API
+
+Package: python3-gevent-websocket
+Architecture: all
+Depends: ${misc:Depends}, ${python3:Depends}
 Description: websocket library for the gevent networking library
  gevent-websocket is a WebSocket library for the gevent networking library.
  .
